--- a/views/invitationCustom.edge
+++ b/views/invitationCustom.edge
@@ -142,7 +142,7 @@ img{
                             <input type="button" class=" d-inline pt-2 pb-2 mt-2 mb-2 btn btn-success" m-2 value="Locate"  onclick="window.location='https://www.google.com/maps/search/?api=1&query={{dt.lat}},{{dt.lng}}' ">
                    
                             <a class="socialbtn h1 d-flex  m-2" href="whatsapp://send?text=The%20generated%20link%20is%20digital%20invitation%20carddevelop%20by%20MeelIndia%20https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-whatsapp" aria-hidden="true"></i></a> 
-                            <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                            <a class="socialbtn h1 d-flex  m-2" href="https://www.facebook.com/sharer/sharer.php?u=https://meelindia.com/invitationCustom?id={{dt._id}}"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
                             <!-- <a class="socialbtn d-flex row" href="https://www.instagram.com/sharer.php?u=https://meelindia.com/invitation?id={{dt._id}}"><i class="fa fa-instagram" aria-hidden="true"></i></a>  -->
                             <a class="socialbtn h1 d-flex  m-2" onclick='myFunction("{{ dt._id }}");'> <i class="fa fa-copy" aria-hidden="true"></i></a>
                             <a class="socialbtn h1 d-flex  m-2" href="{{dt.image}}" download> <i class="fa fa-download" aria-hidden="true"></i></a>
@@ -178,7 +178,7 @@ img{
  //   }
 
     function myFunction(str) {
-            var copyText = 'https://meelindia.com/invitation?id='+str;
+            var copyText = 'https://meelindia.com/invitationCustom?id='+str;
             navigator.clipboard.writeText(copyText);
             alert("Copied the text: " + copyText);
         }
