--- a/public/css/mobile-style.css
+++ b/public/css/mobile-style.css
@@ -9,7 +9,8 @@
     margin-bottom: 0;}
 
     header .row .col-md-5 img {
-  width: 50%;
+  width: 350px;
+  height: 700px;
 }
 
   .section-1 .row .col-md-6 .panel {
