--- a/views/invitationCreate.edge
+++ b/views/invitationCreate.edge
@@ -150,7 +150,7 @@ crossorigin=""></script>
        <div class="col-md-4"></div>
     
     </div>
-    <a class="text-dark h1 bg-dark shadowme p-3 offset-md-1" href="#cyo"><i class="text-danger fa fa-plus-square mb-2 mt-3" aria-hidden="true">   Upload Your Own </i></a>
+        <a class="text-dark h1 bg-dark shadowme p-3 offset-md-2 col-xs-12 h4" href="#cyo"><i class="text-danger fa fa-plus-square mb-2 mt-3" aria-hidden="true">   Upload Your Own </i></a>
     <div class="row">
     <div class="col-md-6 p-1 col-sm-6 ibd">
         
@@ -216,7 +216,7 @@ crossorigin=""></script>
 <div class="container bg-danger pt-4 pb-4 mt-5 rounded shadowme">
     
     <form action="invitationCustomCreateDB" id="cyo" class="col-md-8 offset-md-2 text-light " enctype="multipart/form-data" method="POST">
-        <h5 class="text-center mt-3  text-white">Create / Upload Your Own Invitation</h5>
+        <h2 class="text-center mt-3  text-white">Create / Upload Your Own Invitation</h2>
         <hr>
         <div class="form-group mt-3 h4">
           <label for="title">Invitation Title :</label>
