pv and tc added

--- a/views/index.edge
+++ b/views/index.edge
@@ -279,6 +279,12 @@ crossorigin="anonymous">
         <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=meelindiagroup@gmail.com">
           <input type="button" class="btn btn-danger" value="Send Email" onclick="">
         </a>
+        <br>
+        <br>
+        <a href="https://privacyterms.io/view/UwHuY2MV-5eks0UlK-nuUtL0/" class="text-danger" target="__blank"> Privacy Policy</a>.
+        <br>
+        <a href="https://privacyterms.io/view/V83kVaSS-1tdwD02R-FcbXzG/" class="text-danger" target="__blank"> Terms & Conditions</a>.
+
       </div>
       <div class="col-md-2 col-sm-12">
         <h4 class="text-light">Follow Us</h4>
